@@ -20,6 +20,9 @@ from constants import SHARED_DATA_FILE, CONFIG_HOME
 from updatewindow import UpdateWindow
 from theme import FontSet
 
+#profile
+from utils.urlgetautoproxy import UrlGetWithAutoProxy
+from constants import CACHE_HOME
 
 class FeedScrolledWindow(Gtk.ScrolledWindow):
 
@@ -51,12 +54,59 @@ class FeedView(FeedScrolledWindow):
         self.id_history = CacheList()
         SETTINGS_VIEW.connect("changed::theme", self.id_history.clear)
 
+        self.gui = gui = Gtk.Builder()
+        self.gui.add_from_file(SHARED_DATA_FILE('profile.glade'))
+        self.profile =  self.gui.get_object('profile')
+        
+
         self.append(notebook, page)
 
     def append(self, notebook, page=-1):
         self.notebook = notebook
-        self.tab_label = notebook.append_page(self, self.name, page)
+        self.box = box = Gtk.VBox()
+
+        box.pack_start(self.profile, False, False, 10)
+        box.pack_start(self, True, True, 0)
+        box.show()
+        self.profile.hide()
+
+        self.tab_label = notebook.append_page(box, self.name, page)
         self.tab_label.set_sensitive(False)
+
+    def set_profile(self, entry):
+        label_name =  self.gui.get_object('label_name')
+        label_name.set_label('<b><big>%s</big></b>' % entry.get('name'))
+
+        link=''
+        if entry.get('url'):
+            url = entry['entities']['url']['urls'][0]
+            link = ' &#183; <a href="%s">%s</a>' % (
+                url['expanded_url'], url['display_url'])
+        description="@%s\n<small>%s\n%s</small>" % (
+            entry.get('screen_name'), 
+            entry.get('description'),
+            entry.get('location')+" "+link)
+        label_description =  self.gui.get_object('label_description')
+        label_description.set_label(description)
+
+        dic = {'count_tweets': entry['statuses_count'], 
+               'count_following': entry['friends_count'], 
+               'count_followers': entry['followers_count']}
+        for label, text in dic.items():
+            self.gui.get_object(label).set_label(str(text))
+
+        self.profile.show()
+
+        icon_uri = str(entry['profile_image_url']).replace('_normal.', '_bigger.')
+        icon_file = os.path.join(CACHE_HOME, 'profile_icon.jpg')
+
+        urlget = UrlGetWithAutoProxy(icon_uri)
+        d = urlget.downloadPage(icon_uri, icon_file)
+        d.addCallback(self._set_profile_icon, icon_file)  
+
+    def _set_profile_icon(self, data, icon_file):
+        icon =  self.gui.get_object('icon')
+        icon.set_from_file(icon_file)
 
     def move(self, notebook, page=-1):
         self.remove()
@@ -68,7 +118,7 @@ class FeedView(FeedScrolledWindow):
             self.force_remove()
 
     def force_remove(self):
-        page = self.notebook.page_num(self)
+        page = self.notebook.page_num(self.box)
         print "removed %s page!" % page
         self.notebook.remove_page(page)
 
