@@ -34,6 +34,7 @@ setup(name = 'gfeedline',
                                          'share/gfeedline.glade',
                                          'share/notebook_popup_menu.glade',
                                          'share/preferences.glade',
+                                         'share/profile.glade',
                                          'share/retweet.glade',
                                          'share/select_assistant.glade',
                                          'share/update.glade', 
